crates/swc/tests/stacktrace/issue-1796/es2019/output/stacks.txt
$DIR/tests/stacktrace/issue-1796/es2019/input/index.js:3
        throw new Error('Boom');
              ^

Error: Boom
    at null.<anonymous> ($DIR/tests/stacktrace/issue-1796/es2019/input/index.js:3:15)
    at null.<anonymous> ($DIR/tests/stacktrace/issue-1796/es2019/input/index.js:4:7)
    at Object.<anonymous> ($DIR/tests/stacktrace/issue-1796/es2019/input/index.js:5:3)
    at node:internal/main/run_main_module:17:47
